# ark-gacha

./: .gitignore  .postcssrc.json  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: invoker.ts  main.ts  routes.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/components/: auth.rs  gacha.rs  internal_db.rs  mod.rs  statistics.rs
src/plugins/: vuetify.ts
src/routes/: Login.vue  Main.vue
