[package]
name = "ark-gacha"
version = "0.0.3"
description = "Arknights Gacha Visualizer"
authors = ["kht/Smilingpie"]
license = "AGPL-3.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["json"] }
toml = "0.8.6"
thiserror = "1.0.50"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4.31"

[features]
custom-protocol = ["tauri/custom-protocol"]
